--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,5 @@ jobs:
 
       # specify any bash command here prefixed with `run: `
       # - run: go get -v -t -d ./...
-      - run: sudo apt-get install -y iptables
-      - run: sudo env "PATH=$PATH" go test -v .
+      # - run: sudo apt-get install -y iptables
+      - run: go test -v .
